added RealTime Environment

--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -175,7 +175,7 @@
        "<module 'source.util' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/util.py'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,10 +187,10 @@
     "reload(attackers)\n",
     "reload(defenders)\n",
     "reload(errors)\n",
+    "reload(environment)\n",
     "reload(runner)\n",
     "reload(parsers)\n",
     "reload(game)\n",
-    "#reload(environment)\n",
     "reload(holmes)\n",
     "reload(sad)\n",
     "reload(b2bw2w)\n",
@@ -199,73 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import source.belief"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'source.belief' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/belief.py'>"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reload(source.belief)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'source.players.holmes' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/players/holmes.py'>"
-      ]
-     },
-     "execution_count": 184,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reload(holmes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "T, P1, P2 = 5, 1, 0\n",
-    "g = game.zs_game(util.gen_tar_with_len(T), 1000) #targets_dict[10][0]\n",
+    "T, P1, P2 = 10, 5, 5\n",
+    "g = game.zs_game(util.gen_tar_with_len(T), 10) #targets_dict[10][0]\n",
     "d = holmes.HOLMES(g, 0, 1, L=1, exploration=False)\n",
     "#d = b2bw2w.BeliefMaximizer(g, 0, 1)\n",
     "targets = util.gen_tar_with_len(T)\n",
-    "profiles = util.gen_profiles(targets, [(attackers.UnknownStochasticAttacker, 0),\n",
+    "profiles = util.gen_profiles(targets, [(attackers.UnknownStochasticAttacker, 1),\n",
     "                                       (attackers.StackelbergAttacker, 1),\n",
     "                                       (attackers.SUQR, P1),\n",
     "                                       (attackers.StochasticAttacker, P2)])\n",
@@ -274,6 +219,94 @@
     "a = profiles[-1]\n",
     "a.game = g\n",
     "g.set_players([d], [a], profiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "T, P1, P2 = 3, 5, 5\n",
+    "g = game.zs_game(util.gen_tar_with_len(T), 10) #targets_dict[10][0]\n",
+    "d = holmes.HOLMES(g, 0, 1, L=1, exploration=False)\n",
+    "#d = b2bw2w.BeliefMaximizer(g, 0, 1)\n",
+    "targets = util.gen_tar_with_len(T)\n",
+    "profiles = util.gen_profiles(targets, [(attackers.UnknownStochasticAttacker, 1),\n",
+    "                                       (attackers.StackelbergAttacker, 1),\n",
+    "                                       (attackers.SUQR, P1),\n",
+    "                                       (attackers.StochasticAttacker, P2)])\n",
+    "#a = np.random.choice(profiles, 1, replace=False)[0]\n",
+    "#a = attackers.StackelbergAttacker(g, 1)\n",
+    "a = profiles[-1]\n",
+    "a.game = g\n",
+    "g.set_players([d], [a], profiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "e = runner.Experiment(deepcopy(g), env = \"rt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert a valid strategy\n",
+      "4\n",
+      "insert a valid strategy\n",
+      "23\n",
+      "insert a valid strategy\n",
+      "pupu?\n",
+      "insert a valid strategy\n",
+      "3\n",
+      "insert a valid strategy\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "e.run_interaction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{0: (0.23055815818396624, 0.40286718232333191, 0.36657465949270185),\n",
+       "  1: [0, 1, 0]},\n",
+       " {0: (0, 1, 0), 1: [1, 0, 0]},\n",
+       " {0: (0, 1, 0), 1: [0, 0, 1]}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.game.strategy_history"
    ]
   },
   {
@@ -300,29 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "p = parsers.Parser(\"/home/lorenzo/Scrivania/Experiments/t10/c4/i\"+ str(i) +\"/holmes1-1.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "g = p.parse_row(0)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -333,73 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(e.agent.arms.items())[1][1].compute_strategy().index(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(list(range(len(e.game.values))), key=lambda x: e.game.values[x][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 172,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -408,10 +353,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \t \t \t \t□\t \t \t \t \t \t\n",
-      "0.917\t0.877\t0.965\t0.891\t0.995\t0.865\t0.935\t0.872\t0.908\t0.944\t\n",
-      " \t△\t \t \t \t \t \t \t \t \t\n",
-      "sta_def1 (0.1018356513739873, 0.06087034470917482, 0.146511183740877, 0.075626590695787, 0.17224451488436812, 0.047841956427683595, 0.1191265158395145, 0.055485426960947604, 0.09293314131051349, 0.12752467405714657)\n"
+      " \t \t□\t \t \t\n",
+      "0.527\t0.699\t0.698\t0.746\t0.624\t\n",
+      " \t \t \t \t△\t\n",
+      "----------------------------------------\n",
+      " \t \t \t \t□\t\n",
+      "0.527\t0.699\t0.698\t0.746\t0.624\t\n",
+      " \t \t \t \t△\t\n",
+      "----------------------------------------\n",
+      " \t \t \t \t□\t\n",
+      "0.527\t0.699\t0.698\t0.746\t0.624\t\n",
+      " \t \t \t \t△\t\n",
+      "usto_defV21 [0, 0, 0, 0, 1]\n"
      ]
     }
    ],
@@ -421,229 +374,6 @@
     "print(util.game_str(e.game))\n",
     "print(e.agent.sel_arm, e.game.strategy_history[-1][0])\n",
     "#print(time.time() - start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(e.agent.belief.pr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.550072908401489\n"
-     ]
-    }
-   ],
-   "source": [
-    "start = time.time()\n",
-    "e.run()\n",
-    "print(time.time() - start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'actual_regret': 178.52817236164674,\n",
-       " 'exp_regret': 177.23067668581001,\n",
-       " 'total_rewards': -874.3980000000104}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e.stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{<SUQR id:1 resources:1>: -1.468231599665718,\n",
-       " <StackelbergAttacker id:1 resources:1>: None}"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e.agent.belief.loglk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<SUQR id:1 resources:1>"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e.game.players[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = [1,2,4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "b = {1:a}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from copy import copy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "c = b.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-168-140b9bff3366>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 2"
-     ]
-    }
-   ],
-   "source": [
-    "c[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "c = runner.Configuration(deepcopy(g), \".\", \"prova\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 417,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "rm -rf prova"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "c.run(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "util.plot_conf2(\"exp_regret\", [c], path=\".\", name=None)"
    ]
   }
  ],
