implemented complete batches parallelism, modified util,modified Experiment notebooks

--- a/notebooks/Experiments-Prepare2.ipynb
+++ b/notebooks/Experiments-Prepare2.ipynb
@@ -98,12 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
-    "editable": true,
-    "scrolled": false
+    "editable": true
    },
    "outputs": [
     {
@@ -112,6 +111,17 @@
      "text": [
       "T  5\n",
       "P1  5 P2  5\n",
+      "0 done\n",
+      "1 done\n",
+      "2 done\n",
+      "3 done\n",
+      "4 done\n",
+      "5 done\n",
+      "6 done\n",
+      "7 done\n",
+      "8 done\n",
+      "9 done\n",
+      "P1  1 P2  0\n",
       "0 done\n",
       "1 done\n",
       "2 done\n",
@@ -135,7 +145,7 @@
     "    os.makedirs(experiment_folder)\n",
     "for T in [5]:#, 10]:\n",
     "    print(\"T \", T)\n",
-    "    for P1,P2 in [(5,5)]: #, (5,5)]: #[(0, 1),(1,0), (1,1), (0,5), (5,0), (5,5)]:\n",
+    "    for P1,P2 in [(5,5),(1,0)]: #, (5,5)]: #[(0, 1),(1,0), (1,1), (0,5), (5,0), (5,5)]:\n",
     "        print(\"P1 \",P1,\"P2 \",P2)\n",
     "        for i in range(10):\n",
     "            print(i,\"done\")\n",
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -170,50 +180,6 @@
    "outputs": [],
    "source": [
     "rm -rf $experiment_folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FB1_FR1-1_MAB1_EXP1.csv\r\n"
-     ]
-    }
-   ],
-   "source": [
-    " ls $experiment_folder/t5/p5p5/i0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2.,  4.,  6.])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lst = [[1,2,3], [1,2,3]]\n",
-    "sum(lst, np.zeros(3))"
    ]
   }
  ],
