--- a/notebooks/Experiments-Runner2.ipynb
+++ b/notebooks/Experiments-Runner2.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "# Run\n",
-    "\n",
-    "Notebook used to compile and run the batches of configurations"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -41,6 +25,16 @@
    "source": [
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Run"
    ]
   },
   {
@@ -71,12 +65,13 @@
     "import time \n",
     "import os\n",
     "import re\n",
-    "import functools"
+    "import functools\n",
+    "import concurrent.futures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 182,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +82,7 @@
        "<module 'source.util' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/util.py'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,18 +92,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "# Run"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -121,7 +106,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_el(d, lst):\n",
+    "    if not lst:\n",
+    "        return d\n",
+    "    else:\n",
+    "        return get_el(d[lst[0]], lst[1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## parse batches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -130,54 +137,39 @@
    "outputs": [],
    "source": [
     "batches = []\n",
+    "bdict = {}\n",
     "csv_pattern = re.compile(\"^.+\\.csv$\")\n",
     "for root, dirs, files in os.walk(experiment_folder):\n",
-    "    if files: #and functools.reduce(lambda x,y: x and y, [bool(csv_pattern.match(f)) for f in files]):\n",
-    "        for f in files:\n",
-    "            if (csv_pattern.match(f) and f != \"batch.csv\" and\n",
-    "                f != \"stats.csv\" and f.split('.csv')[0] not in dirs):\n",
-    "                #print(f)\n",
-    "                b = runner.Batch(os.path.join(root, f), root)\n",
-    "                b.parse_batch()\n",
-    "                batches.append(b)"
+    "    if root != experiment_folder:\n",
+    "        args = root.split(experiment_folder)[-1].split(\"/\")\n",
+    "        if not files:\n",
+    "            get_el(bdict, args[:-1])[args[-1]] = {}\n",
+    "        else:\n",
+    "            get_el(bdict, args[:-1])[args[-1]] = []\n",
+    "            for f in files:\n",
+    "                if (csv_pattern.match(f) and f != \"batch.csv\" and\n",
+    "                    f != \"stats.csv\" and f.split('.csv')[0] not in dirs):\n",
+    "                    #print(f)\n",
+    "                    b = runner.Batch(os.path.join(root, f), root)\n",
+    "                    b.parse_batch()\n",
+    "                    batches.append(b)\n",
+    "                    get_el(bdict, args).append(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t5\n"
-     ]
-    }
-   ],
-   "source": [
-    "for d in os.listdir(experiment_folder):\n",
-    "    print(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "10"
+       "20"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,107 +179,173 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m\u001b[01;34mFB1_MAB1_EXP1\u001b[0m/  FB1_MAB1_EXP1.csv\r\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "ls $experiment_folder/t5/p5p5/i0"
+    "## run batches in parallel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('u_status.txt', 'w') as f:\n",
-    "    with redirect_stdout(f):\n",
-    "        for b in batches:\n",
-    "            print(b.results_folder_path)\n",
-    "            b.run(n=1, show_progress=False, workers=1)\n",
-    "            confs = b.configurations\n",
-    "            # util.plot_conf2(\"exp_regret\", c, b.results_folder_path)\n",
-    "            dlist = [{\"name\": c.game.players[0].__class__.name,\n",
-    "                      \"avgs\": c.stats[\"exp_regret\"], \n",
-    "                      \"lb\": c.stats[\"lb_exp_regret\"],\n",
-    "                      \"ub\": c.stats[\"ub_exp_regret\"]}\n",
-    "                     for c in confs]\n",
-    "            util.plot_dicts(dlist, save=True, show=False, semilog=True,\n",
-    "                            path=b.results_folder_path,\n",
-    "                            title=confs[0].game.players[1].__class__.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/onlinesg/onlineSG/source/runner.py\", line 178, in run_an_experiment\n",
-      "    experiment.run()\n",
-      "  File \"/home/onlinesg/onlineSG/source/runner.py\", line 266, in run\n",
-      "    self.run_interaction()\n",
-      "  File \"/home/onlinesg/onlineSG/source/runner.py\", line 255, in run_interaction\n",
-      "    strategy = self.agent.play_strategy()\n",
-      "  File \"/home/onlinesg/onlineSG/source/player.py\", line 53, in play_strategy\n",
-      "    self.last_strategy = self.compute_strategy()\n",
-      "  File \"/home/onlinesg/onlineSG/source/players/holmes.py\", line 257, in compute_strategy\n",
-      "    min_regret, min_s = self.explore_state(self.tree, self.L, strategies)\n",
-      "  File \"/home/onlinesg/onlineSG/source/players/holmes.py\", line 178, in explore_state\n",
-      "    state_node.branches[s], depth)\n",
-      "  File \"/home/onlinesg/onlineSG/source/players/holmes.py\", line 216, in explore_strategy\n",
-      "    logger.info(str(s) + \" \" + str(x) + \" \" + str(t) + \" unreachable\")\n",
-      "  File \"/home/onlinesg/onlineSG/source/players/holmes.py\", line 72, in __str__\n",
-      "    'branches: ' + str(self.branches))\n",
-      "  File \"/home/onlinesg/onlineSG/source/players/holmes.py\", line 50, in __repr__\n",
-      "    'branches: ' + str(self.branches))\n",
-      "  File \"/home/onlinesg/onlineSG/source/players/holmes.py\", line 30, in __str__\n",
-      "    ' p: ' + str(self.p))\n",
-      "AttributeError: 'FrequentistBelief' object has no attribute 'items'\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(b.configurations[-1].experiments[0].info)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "root = \"../PaperExperiments/sta_usto_sto_suqr/t5/p5p5/i0\"\n",
-    "b = runner.Batch(os.path.join(root, \"holmes1-1.csv\"), root)\n",
-    "b.parse_batch()\n",
-    "b.run(1)"
+    "#with open('u_status.txt', 'w') as f:\n",
+    "#    with redirect_stdout(f):\n",
+    "with concurrent.futures.ProcessPoolExecutor(workers) as executor:\n",
+    "    futures = {}\n",
+    "    for b in batches:\n",
+    "        b.run(futures, executor, n=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## collect results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lorenzo/miniconda2/envs/python3/lib/python3.5/site-packages/matplotlib/ticker.py:2041: UserWarning: Data has no positive values, and therefore cannot be log-scaled.\n",
+      "  \"Data has no positive values, and therefore cannot be \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for b in batches:\n",
+    "    b.collect(futures)\n",
+    "    confs = b.configurations\n",
+    "    # util.plot_conf2(\"exp_regret\", c, b.results_folder_path)\n",
+    "    dlist = [{\"name\": c.game.players[0].__class__.name,\n",
+    "              \"avgs\": c.stats[\"exp_regret\"], \n",
+    "              \"lb\": c.stats[\"lb_exp_regret\"],\n",
+    "              \"ub\": c.stats[\"ub_exp_regret\"]}\n",
+    "             for c in confs]\n",
+    "    util.plot_dicts(dlist, save=True, show=False, semilog=True,\n",
+    "                    path=b.results_folder_path,\n",
+    "                    title=confs[0].game.players[1].__class__.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for t in bdict:\n",
+    "    for p in bdict[t]:\n",
+    "        confs = [c for i in bdict[t][p]\n",
+    "                   for b in bdict[t][p][i]\n",
+    "                   for c in b.configurations]\n",
+    "        cdict = {}\n",
+    "        for c in confs:\n",
+    "            cname = c.name.split(\" vs\")[0]\n",
+    "            if cname not in cdict:\n",
+    "                cdict[cname] = [c]\n",
+    "            else:\n",
+    "                cdict[cname].append(c)\n",
+    "        dlist = []\n",
+    "        for n in cdict:\n",
+    "            avg_regrets = [c.stats[\"exp_regret\"] for c in cdict[n]]\n",
+    "            d = util.avg_with_conf(avg_regrets, name=n)\n",
+    "            dlist.append(d)\n",
+    "        util.plot_dicts(dlist, save=True, show=False, semilog=True,\n",
+    "                path=os.path.join(experiment_folder, t, p),\n",
+    "                title=p)"
    ]
   },
   {
@@ -300,162 +358,6 @@
     "## Experiments\n",
     "\n",
     "verify what happened if something went wrong"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "batches[4].configurations[0].experiments[0].exp_regret"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "g = deepcopy(batches[4].configurations[0].game)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Game values:[[0.755, 0.755], [0.606, 0.606], [0.662, 0.662], [0.992, 0.992], [0.56, 0.56]] players{0: <FB id:0 resources:1>, 1: <StochasticAttacker id:1 resources:1>} time_horizon:100>"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g"
    ]
   },
   {
@@ -503,83 +405,6 @@
     "print(e.game.strategy_history[-1])\n",
     "#print(util.game_str(e.game, lenght=7))\n",
     "print(e.game.history[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e.agent.arms[0]._finalized"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "inp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 1, 0, 0, 0],\n",
-       " [0.03, 0.13, 0.73, 0.0, 0.11],\n",
-       " [0.0, 0.13, 0.18, 0.48, 0.21],\n",
-       " [0.44, 0.02, 0.09, 0.42, 0.03]]"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[p.compute_strategy() for p in e.agent.profiles]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "e.run()"
    ]
   }
  ],
