--- a/notebooks/Experiments-Prepare2.ipynb
+++ b/notebooks/Experiments-Prepare2.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -56,6 +56,7 @@
     "import source.parsers as parsers\n",
     "import source.players.attackers as atk\n",
     "import source.util as util\n",
+    "import source.game as game\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -98,9 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -110,28 +111,8 @@
      "output_type": "stream",
      "text": [
       "T  5\n",
-      "P1  5 P2  5\n",
-      "0 done\n",
-      "1 done\n",
-      "2 done\n",
-      "3 done\n",
-      "4 done\n",
-      "5 done\n",
-      "6 done\n",
-      "7 done\n",
-      "8 done\n",
-      "9 done\n",
-      "P1  1 P2  0\n",
-      "0 done\n",
-      "1 done\n",
-      "2 done\n",
-      "3 done\n",
-      "4 done\n",
-      "5 done\n",
-      "6 done\n",
-      "7 done\n",
-      "8 done\n",
-      "9 done\n"
+      "P1  1 P2  1\n",
+      "0 done\n"
      ]
     }
    ],
@@ -145,17 +126,40 @@
     "    os.makedirs(experiment_folder)\n",
     "for T in [5]:#, 10]:\n",
     "    print(\"T \", T)\n",
-    "    for P1,P2 in [(5,5),(1,0)]: #, (5,5)]: #[(0, 1),(1,0), (1,1), (0,5), (5,0), (5,5)]:\n",
+    "    for P1,P2 in [(1,1)]: #, (5,5)]: #[(0, 1),(1,0), (1,1), (0,5), (5,0), (5,5)]:\n",
     "        print(\"P1 \",P1,\"P2 \",P2)\n",
-    "        for i in range(10):\n",
+    "        for i in range(1):\n",
     "            print(i,\"done\")\n",
     "            targets = util.gen_tar_with_len(T)\n",
-    "            profiles = util.gen_profiles(targets, [(atk.UnknownStochasticAttacker, 1),\n",
-    "                                                   (atk.StackelbergAttacker, 1),\n",
-    "                                                   (atk.SUQR, P1),\n",
-    "                                                   (atk.StochasticAttacker, P2)])\n",
-    "            poss_atk = profiles[1:] + util.gen_profiles(targets,[(atk.StochasticAttacker, 1)])\n",
-    "            a = np.random.choice(poss_atk, 1, replace=False)[0]\n",
+    "            mock_game = game.zs_game(targets, time_horizon)\n",
+    "            adversaries = [\"usto\",\n",
+    "                           \"sta\",\n",
+    "                           \"suqr\",\n",
+    "                           \"sto\",\n",
+    "                           \"fp\",\n",
+    "                           \"usuqr\"]\n",
+    "\n",
+    "            # choose the profiles\n",
+    "            plist = [\"usto\",\n",
+    "                     \"sta\",\n",
+    "                     \"suqr\",\n",
+    "                     \"sto\",\n",
+    "                     \"fp\",\n",
+    "                     \"usuqr\"]\n",
+    "            pdict = util.gen_pdict(mock_game, plist)\n",
+    "            profiles = [pdict[p].prof for p in pdict]\n",
+    "            #profiles = util.gen_profiles(targets, [(atk.UnknownStochasticAttacker, 1),\n",
+    "            #                                       (atk.StackelbergAttacker, 1),\n",
+    "            #                                       (atk.SUQR, P1),\n",
+    "            #                                       (atk.StochasticAttacker, P2)])\n",
+    "            #poss_atk = profiles[1:] #+ util.gen_profiles(targets,[(atk.StochasticAttacker, 1)])\n",
+    "            #a = np.random.choice(poss_atk, 1, replace=False)[0]\n",
+    "            adv = \"usuqr\"\n",
+    "            #adv = np.random.choice(adversaries, 1)[0]\n",
+    "            if pdict[adv].adv is not None:\n",
+    "                a = deepcopy(pdict[adv].adv)\n",
+    "            else:\n",
+    "                a = deepcopy(pdict[adv].prof)\n",
     "            folder = experiment_folder + \"/t\" + str(T) + \"/p\" + str(P1)+ \"p\" + str(P2)+ \"/i\" + str(i)\n",
     "            if not os.path.exists(folder):\n",
     "                os.makedirs(folder)\n",
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
