--- a/notebooks/Experiments-Prepare2.ipynb
+++ b/notebooks/Experiments-Prepare2.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -112,7 +112,11 @@
      "text": [
       "T  5\n",
       "P1  1 P2  1\n",
-      "0 done\n"
+      "0 done\n",
+      "1 done\n",
+      "2 done\n",
+      "3 done\n",
+      "4 done\n"
      ]
     }
    ],
@@ -120,7 +124,7 @@
     "experiment_folder = \"../NewExperiments\"\n",
     "time_horizon = 100\n",
     "att_incl = False\n",
-    "defender = [\"FB1\", \"MAB1\",\"EXP1\"] # \"FR1-1\",\n",
+    "defender = [\"FB1\", \"FB1-1\" , \"MAB1\",\"EXP1\"] # \"FR1-1\",\n",
     "#attacker = [\"sta1\"]\n",
     "if not os.path.exists(experiment_folder):\n",
     "    os.makedirs(experiment_folder)\n",
@@ -128,7 +132,7 @@
     "    print(\"T \", T)\n",
     "    for P1,P2 in [(1,1)]: #, (5,5)]: #[(0, 1),(1,0), (1,1), (0,5), (5,0), (5,5)]:\n",
     "        print(\"P1 \",P1,\"P2 \",P2)\n",
-    "        for i in range(1):\n",
+    "        for i in range(5):\n",
     "            print(i,\"done\")\n",
     "            targets = util.gen_tar_with_len(T)\n",
     "            mock_game = game.zs_game(targets, time_horizon)\n",
@@ -175,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
