Fixed parser for games with observability, tested and working

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "<module 'source.util' from 'C:\\\\Users\\\\Mattia\\\\Desktop\\\\Mattia\\\\Git\\\\onlineSG\\\\source\\\\util.py'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((4, 4), (1, 1), (7, 7), (3, 3), (5, 5))\n",
-      "5 [4, 1, 7, 3, 5]\n",
-      "{0: 0.613, 1: 0.549, 2: 0.994, 3: 0.682, 4: 0.694}\n"
+      "((3, 3), (2, 2), (1, 1), (8, 8), (4, 4))\n",
+      "5 [3, 2, 1, 8, 4]\n",
+      "{0: 0.686, 1: 0.756, 2: 0.823, 3: 0.918, 4: 0.806}\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
     "    profiles.append(attackers.StochasticAttacker(g, 1, 1, *d))\n",
     "profiles.append(attackers.StackelbergAttacker(g, 1))\n",
     "defender = [base_defenders.StackelbergDefender(g, 0, 1)]\n",
-    "g.set_players(defender, attacker, profiles)"
+    "#g.set_players(defender, attacker, profiles)"
    ]
   },
   {
@@ -169,6 +169,104 @@
     "print(e.game.strategy_history[-1])\n",
     "print(e.agent.avg_rewards)\n",
     "print(util.game_str(e.game, lenght=7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = util.gen_tar_with_len(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.983, 0.721, 0.997, 0.869, 0.761, 0.721, 0.877]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((0.983, 0.983), (0.721, 0.721), (0.997, 0.997), (0.869, 0.869), (0.761, 0.761), (0.721, 0.721), (0.877, 0.877))\n"
+     ]
+    }
+   ],
+   "source": [
+    "mval = tuple((v, v) for v in m)\n",
+    "#g1 = game.GameWithObservabilities(mval, time_horizon)\n",
+    "M = [0, 1, 2, 3, 4, 5, 6,]\n",
+    "#g1.set_players(defender, attacker, profiles)\n",
+    "print (mval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.865, 0.865, 0.865, 0.865, 0.865, 0.865, 0.865, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import re\n",
+    "from copy import deepcopy\n",
+    "import enum\n",
+    "from source.errors import AlreadyFinalizedError\n",
+    "from math import log\n",
+    "#print(g1.values[1][1])\n",
+    "#k=[g1.values[0][1] * int(i != t) for i in M]\n",
+    "print (k)\n",
+    "A_ub = []\n",
+    "for t in M:\n",
+    "    terms = [mval[t][1] * int(i != t) for i in M]\n",
+    "    terms += [1]\n",
+    "    A_ub.append(terms)\n",
+    "b_ub = [0 for i in range(len(A_ub))]\n",
+    "A_eq = [[1 for i in M] + [0]]\n",
+    "b_eq = [1]\n",
+    "bounds = [(0, 1) for i in M] + [(None, None)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0, 0.983, 0.983, 0.983, 0.983, 0.983, 0.983, 1], [0.721, 0.0, 0.721, 0.721, 0.721, 0.721, 0.721, 1], [0.997, 0.997, 0.0, 0.997, 0.997, 0.997, 0.997, 1], [0.869, 0.869, 0.869, 0.0, 0.869, 0.869, 0.869, 1], [0.761, 0.761, 0.761, 0.761, 0.0, 0.761, 0.761, 1], [0.721, 0.721, 0.721, 0.721, 0.721, 0.0, 0.721, 1], [0.877, 0.877, 0.877, 0.877, 0.877, 0.877, 0.0, 1]] [0, 0, 0, 0, 0, 0, 0] [[1, 1, 1, 1, 1, 1, 1, 0]] [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A_ub, b_ub, A_eq, b_eq)"
    ]
   },
   {
