Fixes to players, run with observabilities working

--- a/notebooks/Test Parser.ipynb
+++ b/notebooks/Test Parser.ipynb
@@ -40,8 +40,8 @@
      "output_type": "stream",
      "text": [
       "Name,T,0,1,2,3,4,Defender,Attacker,Attacker,Obs0,Obs1,Obs2,Obs3,Obs4\n",
-      "g1,5,(1 7 1),(1 1 12),(12 1 1),(1 1 2),(2 2 3),defender,player,sta,0.4236,0.65,0.972,0.65686,0.12\n",
-      "g2,3,1,1,1,1,1,defender,,sta,0.5,-9,50,0.5,0.5\n",
+      "g1,5,(1 7 1),(1 1 12),(12 1 1),(1 1 2),(2 2 3),defender,player,obsta,0.4236,0.65,0.972,0.65686,0.12\n",
+      "g2,3,1,1,1,1,1,defender,,obsuqr,0.5,-9,50,0.5,0.5\n",
       "g3,6,1,3,1,2,1,sta_def,sta,,0.6,0.6,0.6,a,b\n",
       "g4,5,1,12,13,1,1,defender,player,sta,0.7,,,0.7,0.7\n",
       "\n"
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "<Configuration game:5,1,1,12,1,2,player1,sta1,defender1 experiments:[] stats:{}>"
+       "<Configuration game:5,1,1,12,1,2,player1,obsta1,defender1 experiments:[] stats:{}>"
       ]
      },
      "execution_count": 5,
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "<GameWithObservabilities values:[[1, 7, 1], [1, 1, 12], [12, 1, 1], [1, 1, 2], [2, 2, 3]] players{1: <Attacker id:1 resources:1>, 2: <StackelbergAttacker id:2 resources:1>, 0: <Defender id:0 resources:1>} time_horizon:5>"
+       "<GameWithObservabilities values:[[1, 7, 1], [1, 1, 12], [12, 1, 1], [1, 1, 2], [2, 2, 3]] players{1: <Attacker id:1 resources:1>, 2: <ObservingStackelbergAttacker id:2 resources:1>, 0: <Defender id:0 resources:1>} time_horizon:5>"
       ]
      },
      "execution_count": 6,
@@ -112,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "{0: 0.424, 1: 0.65, 2: 0.972, 3: 0.657, 4: 0.12}"
+       "<GameWithObservabilities values:[[1.0, 1.0], [1.0, 1.0], [1.0, 1.0], [1.0, 1.0], [1.0, 1.0]] players{1: <ObservingSUQR id:1 resources:1>, 0: <Defender id:0 resources:1>} time_horizon:3>"
       ]
      },
      "execution_count": 7,
@@ -121,7 +121,7 @@
     }
    ],
    "source": [
-    "b.configurations[0].game.observabilities"
+    "b.configurations[1].game"
    ]
   },
   {
@@ -132,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "{0: 0.5, 1: 1.0, 2: 1.0, 3: 0.5, 4: 0.5}"
+       "<GameWithObservabilities values:[[1.0, 1.0], [3.0, 3.0], [1.0, 1.0], [2.0, 2.0], [1.0, 1.0]] players{1: <StackelbergAttacker id:1 resources:1>, 0: <StackelbergDefender id:0 resources:1>} time_horizon:6>"
       ]
      },
      "execution_count": 8,
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "b.configurations[1].game.observabilities"
+    "b.configurations[2].game"
    ]
   },
   {
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "{0: 0.6, 1: 0.6, 2: 0.6, 3: 1.0, 4: 1.0}"
+       "<GameWithObservabilities values:[[1.0, 1.0, 1.0], [12.0, 12.0, 12.0], [13.0, 13.0, 13.0], [1.0, 1.0, 1.0], [1.0, 1.0, 1.0]] players{1: <Attacker id:1 resources:1>, 2: <StackelbergAttacker id:2 resources:1>, 0: <Defender id:0 resources:1>} time_horizon:5>"
       ]
      },
      "execution_count": 9,
@@ -161,7 +161,7 @@
     }
    ],
    "source": [
-    "b.configurations[2].game.observabilities"
+    "b.configurations[3].game"
    ]
   },
   {
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "{0: 0.7, 1: 1.0, 2: 1.0, 3: 0.7, 4: 0.7}"
+       "{0: 0.424, 1: 0.65, 2: 0.972, 3: 0.657, 4: 0.12}"
       ]
      },
      "execution_count": 10,
@@ -181,8 +181,75 @@
     }
    ],
    "source": [
+    "b.configurations[0].game.observabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0.5, 1: 1.0, 2: 1.0, 3: 0.5, 4: 0.5}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.configurations[1].game.observabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0.6, 1: 0.6, 2: 0.6, 3: 1.0, 4: 1.0}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.configurations[2].game.observabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0.7, 1: 1.0, 2: 1.0, 3: 0.7, 4: 0.7}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "b.configurations[3].game.observabilities"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
