--- a/Test.ipynb
+++ b/Test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "<module 'source.util' from 'C:\\\\Users\\\\Mattia\\\\Desktop\\\\Mattia\\\\Git\\\\onlineSG\\\\source\\\\util.py'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((3, 3), (2, 2), (1, 1), (8, 8), (4, 4))\n",
-      "5 [3, 2, 1, 8, 4]\n",
-      "{0: 0.686, 1: 0.756, 2: 0.823, 3: 0.918, 4: 0.806}\n"
+      "((9, 9), (5, 5), (2, 2), (1, 1), (8, 8))\n",
+      "5 [9, 5, 2, 1, 8]\n",
+      "{0: 0.541, 1: 0.52, 2: 0.848, 3: 0.507, 4: 0.822}\n"
      ]
     }
    ],
@@ -127,13 +127,13 @@
     "for d in distributions:\n",
     "    profiles.append(attackers.StochasticAttacker(g, 1, 1, *d))\n",
     "profiles.append(attackers.StackelbergAttacker(g, 1))\n",
-    "defender = [base_defenders.StackelbergDefender(g, 0, 1)]\n",
-    "#g.set_players(defender, attacker, profiles)"
+    "defender = [player.Defender(g, 0, 1)]\n",
+    "g.set_players(defender, attacker, profiles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,131 +142,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "GurobiError",
-     "evalue": "No Gurobi license found (user mattia, host LAPTOP-FK21MAJ8, hostid 901c63d0, cores 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mGurobiError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-29-b843b8a90c60>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_interaction_with_observations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrategy_history\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mavg_rewards\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgame_str\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgame\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlenght\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\Mattia\\Git\\onlineSG\\source\\runner.py\u001b[0m in \u001b[0;36mrun_interaction_with_observations\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    280\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    281\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mrun_interaction_with_observations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 282\u001b[1;33m         \u001b[0mstrategy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplay_strategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    283\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menvironment\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobserve_strategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstrategy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    284\u001b[0m         \u001b[0mrealization\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample_strategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\Mattia\\Git\\onlineSG\\source\\player.py\u001b[0m in \u001b[0;36mplay_strategy\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     84\u001b[0m         \u001b[1;33m*\u001b[0m\u001b[0mlast_strategy\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m         \"\"\"\n\u001b[1;32m---> 86\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlast_strategy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompute_strategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlast_strategy\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\Mattia\\Git\\onlineSG\\source\\players\\base_defenders.py\u001b[0m in \u001b[0;36mcompute_strategy\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mcompute_strategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbr_stackelberg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mbr_stackelberg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\Mattia\\Git\\onlineSG\\source\\players\\base_defenders.py\u001b[0m in \u001b[0;36mbr_stackelberg\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mbr_stackelberg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbr_stackelberg_strategy\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 86\u001b[1;33m             \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgurobipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"SSG\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m             \u001b[0mtargets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m             \u001b[0mstrategy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mmodel.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.__init__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mgurobi.pxi\u001b[0m in \u001b[0;36mgurobipy.gurobi._getdefaultenv\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32menv.pxi\u001b[0m in \u001b[0;36mgurobipy.Env.__init__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mGurobiError\u001b[0m: No Gurobi license found (user mattia, host LAPTOP-FK21MAJ8, hostid 901c63d0, cores 2)"
-     ]
-    }
-   ],
-   "source": [
-    "e.run_interaction_with_observations()\n",
-    "print(e.game.strategy_history[-1])\n",
-    "print(e.agent.avg_rewards)\n",
-    "print(util.game_str(e.game, lenght=7))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = util.gen_tar_with_len(7)"
+    "e.run_interaction_with_observations()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.983, 0.721, 0.997, 0.869, 0.761, 0.721, 0.877]\n"
+      "{0: [0.2, 0.2, 0.2, 0.2, 0.2], 1: [1, 0, 0, 0, 0]}\n",
+      "{1: [0], 0: [1]}\n",
+      "[(1, 0)]\n",
+      "7.2\n",
+      "4.585987261146497\n"
      ]
     }
    ],
    "source": [
-    "print(m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "((0.983, 0.983), (0.721, 0.721), (0.997, 0.997), (0.869, 0.869), (0.761, 0.761), (0.721, 0.721), (0.877, 0.877))\n"
-     ]
-    }
-   ],
-   "source": [
-    "mval = tuple((v, v) for v in m)\n",
-    "#g1 = game.GameWithObservabilities(mval, time_horizon)\n",
-    "M = [0, 1, 2, 3, 4, 5, 6,]\n",
-    "#g1.set_players(defender, attacker, profiles)\n",
-    "print (mval)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.865, 0.865, 0.865, 0.865, 0.865, 0.865, 0.865, 0.0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import re\n",
-    "from copy import deepcopy\n",
-    "import enum\n",
-    "from source.errors import AlreadyFinalizedError\n",
-    "from math import log\n",
-    "#print(g1.values[1][1])\n",
-    "#k=[g1.values[0][1] * int(i != t) for i in M]\n",
-    "print (k)\n",
-    "A_ub = []\n",
-    "for t in M:\n",
-    "    terms = [mval[t][1] * int(i != t) for i in M]\n",
-    "    terms += [1]\n",
-    "    A_ub.append(terms)\n",
-    "b_ub = [0 for i in range(len(A_ub))]\n",
-    "A_eq = [[1 for i in M] + [0]]\n",
-    "b_eq = [1]\n",
-    "bounds = [(0, 1) for i in M] + [(None, None)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.0, 0.983, 0.983, 0.983, 0.983, 0.983, 0.983, 1], [0.721, 0.0, 0.721, 0.721, 0.721, 0.721, 0.721, 1], [0.997, 0.997, 0.0, 0.997, 0.997, 0.997, 0.997, 1], [0.869, 0.869, 0.869, 0.0, 0.869, 0.869, 0.869, 1], [0.761, 0.761, 0.761, 0.761, 0.0, 0.761, 0.761, 1], [0.721, 0.721, 0.721, 0.721, 0.721, 0.0, 0.721, 1], [0.877, 0.877, 0.877, 0.877, 0.877, 0.877, 0.0, 1]] [0, 0, 0, 0, 0, 0, 0] [[1, 1, 1, 1, 1, 1, 1, 0]] [1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(A_ub, b_ub, A_eq, b_eq)"
+    "print(e.game.strategy_history[-1])\n",
+    "print(e.game.history[-1])\n",
+    "print(e.game.observation_history[-1])\n",
+    "print(e.environment.last_exp_loss)\n",
+    "print(e.environment.last_opt_loss)"
    ]
   },
   {
