Refactored subclasses of Player by bringing some methods to more general classes

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "<module 'source.util' from 'C:\\\\Users\\\\Mattia\\\\Desktop\\\\Mattia\\\\Git\\\\onlineSG\\\\source\\\\util.py'>"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,16 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((9, 9), (5, 5), (2, 2), (1, 1), (8, 8))\n",
-      "5 [9, 5, 2, 1, 8]\n",
-      "{0: 0.541, 1: 0.52, 2: 0.848, 3: 0.507, 4: 0.822}\n"
+      "Values: ((2, 2), (5, 5), (8, 8), (4, 4), (1, 1))\n",
+      "Observabilities: {0: 0.5, 1: 0.5, 2: 0.5, 3: 0.5, 4: 0.5}\n"
      ]
     }
    ],
@@ -115,63 +114,130 @@
     "for i in range(20):\n",
     "    distributions.append(tuple(util.gen_distr(T)))\n",
     "values = tuple((v, v) for v in targets)\n",
-    "print(values)\n",
-    "observabilities = util.gen_observabilities_with_len(T)\n",
-    "g = game.GameWithObservabilities(values, time_horizon)\n",
-    "print(T, targets)\n",
-    "print(observabilities)\n",
-    "g.set_observabilities(observabilities)\n",
-    "attacker = [attackers.ObservingStackelbergAttacker(g, 1, 1)]\n",
+    "print(\"Values:\", values)\n",
+    "observabilities = {0: 0.5, 1: 0.5, 2: 0.5, 3: 0.5, 4: 0.5}\n",
+    "print(\"Observabilities:\", observabilities)\n",
+    "g = game.Game(values, time_horizon)\n",
+    "g_o = game.GameWithObservabilities(values, time_horizon)\n",
+    "g_o.set_observabilities(observabilities)\n",
+    "\n",
+    "#generating attacker, defender and profiles for game without observabilities\n",
+    "attacker = [attackers.StackelbergAttacker(g, 1, 1)]\n",
     "profiles = []\n",
-    "profiles.append(attackers.ObservingStackelbergAttacker(g, 1, 1))\n",
+    "profiles.append(attackers.StackelbergAttacker(g, 1, 1))\n",
     "for d in distributions:\n",
     "    profiles.append(attackers.StochasticAttacker(g, 1, 1, *d))\n",
     "profiles.append(attackers.StackelbergAttacker(g, 1))\n",
-    "defender = [player.Defender(g, 0, 1)]\n",
-    "g.set_players(defender, attacker, profiles)"
+    "defender = [base_defenders.StackelbergDefender(g, 0, 1)]\n",
+    "g.set_players(defender, attacker, profiles)\n",
+    "\n",
+    "#generating attacker, defender and profiles for game with observabilities\n",
+    "attacker_o = [attackers.ObservingStackelbergAttacker(g_o, 1, 1)]\n",
+    "profiles_o = []\n",
+    "profiles_o.append(attackers.ObservingStackelbergAttacker(g_o, 1, 1))\n",
+    "for d in distributions:\n",
+    "    profiles_o.append(attackers.StochasticAttacker(g_o, 1, 1, *d))\n",
+    "#adding standard Stackelberg attacker to compare its behavior wrt Observing one\n",
+    "profiles_o.append(attackers.StackelbergAttacker(g_o, 1))\n",
+    "defender_o = [base_defenders.StackelbergDefender(g_o, 0, 1)]\n",
+    "g_o.set_players(defender_o, attacker_o, profiles_o)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = runner.Experiment(g)"
+    "e = runner.Experiment(g)\n",
+    "e_o = runner.Experiment(g_o)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e.run_interaction_with_observations()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: [0.2, 0.2, 0.2, 0.2, 0.2], 1: [1, 0, 0, 0, 0]}\n",
-      "{1: [0], 0: [1]}\n",
-      "[(1, 0)]\n",
-      "7.2\n",
-      "4.585987261146497\n"
+      "[{0: [0.0, 0.30434782608695654, 0.5652173913043479, 0.13043478260869557, 0.0]}]\n",
+      "[{0: [0.0, 0.30434782608695654, 0.5652173913043479, 0.13043478260869557, 0.0]}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "e.run_interaction()\n",
+    "e_o.run_interaction_with_observations()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: [0.0, 0.30434782608695654, 0.5652173913043479, 0.13043478260869557, 0.0], 1: [0, 0, 0, 1, 0]}\n",
+      "{1: [3], 0: [2]}\n",
+      "3.4782608695652177\n",
+      "3.478260869565216\n"
      ]
     }
    ],
    "source": [
     "print(e.game.strategy_history[-1])\n",
     "print(e.game.history[-1])\n",
-    "print(e.game.observation_history[-1])\n",
     "print(e.environment.last_exp_loss)\n",
     "print(e.environment.last_opt_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: [0.0, 0.30434782608695654, 0.5652173913043479, 0.13043478260869557, 0.0], 1: [0, 0, 1, 0, 0]}\n",
+      "{1: [2], 0: [1]}\n",
+      "[(1, 0)]\n",
+      "3.478260869565217\n",
+      "3.4782608695652177\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e_o.game.strategy_history[-1])\n",
+    "print(e_o.game.history[-1])\n",
+    "print(e_o.game.observation_history[-1])\n",
+    "print(e_o.environment.last_exp_loss)\n",
+    "print(e_o.environment.last_opt_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(e_o.game, game.GameWithObservabilities)"
    ]
   },
   {
